# veAgentBench

./: .gitignore  LICENSE  README.md  README.zh-CN.md  benchmark_config.json  bfcl_mcp_server_config.py  main.py  pyproject.toml  setup.py
agents/: financial_analysis_agent.py  legal_aid_agent.py
agents/bfcl/: agent.py
agents/knowledge/: agent_with_knowledge.py
agents/longmemeval/mem0/: agent.py
agents/longmemeval/viking/: agent.py
agents/utils/: akshare_stock_complete_apis.py  data_loader.py
envs/dockers/: base.Dockerfile
example_dataset/mcptask/: financial_deep_research.evalset.json  testcase.csv
example_dataset/mcptask/traces/: veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_10_6f758623d9c0a059313635158037b885.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_11_e94c68383d15f0b6c5cd42aadc5f509a.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_12_23012b93a0f4f11dc863df4474a8e055.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_13_39ceb2d9a2223383fb4bd4d4500f7876.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_14_a0c6b2625b028b54ee9cf96aea7ea205.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_15_28c32a3fb074bac5b7232e648996e0e6.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_16_a9d5827594b48614b7b39f862717fed6.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_17_7b020f49057fe1d67427fb1b2f96ac3.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_18_f351e0bc489459a3aee22308f8bc5f4d.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_19_6b06aa670c676af30a046c773aec699e.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_1_425992b64225f91fb71ae9d611817b98.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_20_d17041663bc972e87b731dd28e1a24c0.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_21_cd2f01e2373bdde936884e50acce9f1e.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_22_7c3f8099b3acc302280b181e92395dcb.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_23_248086a15bc7d78ad1d023bda9ad9a4b.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_24_ad45eaa8197cb8ba2217c29fdde42a2f.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_25_6c3d8d4268f4723a11e8a0b55ac90ad6.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_26_809d8e6348da4ec1281fb2a19e0813ac.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_27_3b87785d52e525b178b3a571ab7d5ded.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_28_2e9376cc0af2c34d9f42fb131fd2dcb.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_29_2968dec8aa2d782edf6a584a881e504f.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_2_526b648ddbd4f21016c762dce38849c5.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_30_6df5932216d5cfd5d29712176c243839.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_31_f0b507a15c4f29d9cbb51ef145c691d4.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_32_ee85933e860f9b1025ec3cf042742c3d.json  veadk_opentelemetry_tracer_veadk_default_user_financial_deep_research_33_542d6aa4a75890cafd1395b78e317f3.json  (+26 more)
examples/: mcptest.py  rags.py  test.py
examples/metric_test/: test_custom_metric.py
samples/knowledge_eval/: README.md  bench_config.yaml  import.py
samples/locomo_eval/: Readme.md  add_locomo_mem0.py  add_locomo_viking.py  test_mem0.yaml  test_viking.yaml
samples/longmem_eval/: Readme.md  add_mem0_longmem.py  add_viking_longmem.py  longmemeval-s.jsonl  test_mem0.yaml  test_viking.yaml
samples/multiturn_test/: config_template.yaml  test_multi_turn.csv
testsets/: core.json
veagentbench/: tool_calling.py
veagentbench/agents/: __init__.py  adk_agents.py  base_agent.py  consts.py  local_adk_agent.py  test.py  tracer.py  veagent.py
veagentbench/cli/: README.md  __init__.py  main.py
veagentbench/dataset/: dataset.py  huggingface_dataset.py  huggingface_dataset_example.py
veagentbench/evals/deepeval/: __init__.py  constants.py  (+4 more)
veagentbench/metrics/: __init__.py  base.py
veagentbench/models/: models.py
veagentbench/report/: README.md  extract_metrics_corrected.py  view_case_metrics.py
veagentbench/runner/: run.py
veagentbench/task/: base.py  task.py
veagentbench/test_case/: __init__.py  agent_test_case.py
veagentbench/utils/: analyze_trace.py  config_generator.py  eval_set.py  extract_expected_tool_calls.py  extract_performance_data.py  mcp_client.py  test.py  tool_result_success.py
(+237 files in other folders)
